Fix spacing issues

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -15,7 +15,5 @@
 
 *{
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 }
 
